<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_container_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:orientation="vertical">

    <TextView android:id="@+id/tv_explanation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/explanation_msg"/>

    <Button android:id="@+id/btn_search_by_top_rated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/show_movies_top_rated"/>

    <EditText android:id="@+id/et_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_a_name_to_search"
        android:inputType="text" />

    <Button android:id="@+id/btn_search_by_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/search"/>


    <TextView android:id="@+id/tv_msg_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:padding="5dp"
        android:text="@string/list_is_empty"
        android:scrollbars="vertical"/>

    <ProgressBar android:id="@+id/progress_bar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:visibility="gone"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:indeterminate="true" />


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:background="#109090"/>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>